@@ -72,6 +72,7 @@
 		"?LogisticRequestManager",
 		"?m-lawful-evil",
 		"?markers",
+		"?modmashsplinternewworlds",
 		"?ModuleInserter",
 		"?NewGamePlus",
 		"?NonWaveDefense2",
